--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,16 @@
   <version>1.0-SNAPSHOT</version>
   <name>SparkWebApp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+      <maven.compiler.source>1.8 </maven.compiler.source>
+      <maven.compiler.target>1.8 </maven.compiler.target>
+  </properties>
   <dependencies>
+       <dependency>          
+           <groupId>com.sparkjava</groupId>            
+           <artifactId>spark-core</artifactId>            
+           <version>2.9.1</version>        
+       </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
