--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
       <maven.compiler.target>1.8 </maven.compiler.target>
   </properties>
   <dependencies>
+      
        <dependency>          
            <groupId>com.sparkjava</groupId>            
            <artifactId>spark-core</artifactId>            
@@ -20,8 +21,16 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
+      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.5.2</version>
+      <scope>test</scope>
+      <type>jar</type>
     </dependency>
   </dependencies>
   <build>  
@@ -48,7 +57,23 @@
                       </goals>   
   </execution>                
   </executions>            
-  </plugin>        
+  </plugin>
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.19.1</version>
+    <configuration>
+        <testFailureIgnore>true</testFailureIgnore>
+    </configuration>
+</plugin> 
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.19.1</version>
+    <configuration>
+        <testFailureIgnore>true</testFailureIgnore>
+    </configuration>
+</plugin>       
   </plugins>    
   </build>
 </project>
